<resources>
    <string name="app_name">Скидки ЧР</string>
    <string name="app_name2">Скидки ЧР</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shops">Магазины</string>
    <string name="tovars">Товары</string>
    <string name="favarit">Избранное</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">jKwxD68Z3gnLHYD6rLIxliwiYknn2oxX79vW1lgq</string>
    <string name="back4app_client_key">GeyODZ39CNbwQ1I7PAWDIyFO6LPusEg3jR3pubBw</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="shops_list_empty">Магазины отсутствуют</string>
    <string name="aboutshop">О магазине</string>
    <string name="follow">Подписаться</string>
    <string name="unfollow">Отписаться</string>
    <string name="show_map">Показать на карте</string>
    <string name="tovar_name">Tovar Name</string>
    <string name="loading">Загрузка…</string>
    <string name="wanna_add_shop">Хотите добавить свой магазин ?</string>
    <string name="wanna_add_shop_2">Для добавления магазина или получения консультации обращайтесь:</string>
    <string name="imam_phone_number">+7 928 940–84–93</string>
    <string name="sales_manager">сэйлс-манеджер: Имам</string>
    <string name="say_you_from_us">Скажите в магазине, что нашли товар в приложении !</string>
    <string name="developer_name">Разработчик: Ахмадов Н.А.</string>
    <string name="shop_follow">Подписаться</string>
    <string name="shop_name">Shop Name</string>
    <string name="title_about_shop">О магазине</string>
    <string name="title_description_not_exist">Описание отсутствует</string>
    <string name="nav_title_followings">Подписки</string>
    <string name="following_tovar_image_description">товар из подписки</string>
    <string name="title_tovar_new_price">8000</string>
    <string name="title_tovar_old_price">12000</string>
    <string name="title_tovar_category">Category</string>
    <string name="official_instagram">\@skidi_chr</string>
    <string name="official_email">skidki.chr@mail.ru</string>
    <string name="icon_instagram">icon_instagram</string>
    <string name="icon_gmail">icon_gmail</string>
    <string name="official_logo">official_logo</string>


</resources>
