<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginTop="4dp"

  >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
       >


        <ImageView
            android:id="@+id/FollowingTovarImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:contentDescription="@string/following_tovar_image_description"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/FollowingShopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/following_shop_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                app:civ_border_color="@color/blue"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/following_shop_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/following_shop_image"
                android:layout_toRightOf="@+id/following_shop_image"
                android:maxLines="3"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/shop_name"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/following_shop_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#edecec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FollowingShopLayout" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@id/FollowingTovarImage"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/FollowingTovarOldPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="3dp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="9"
                android:textColor="@color/white"
                android:padding="2dp"
                android:text="@string/title_tovar_old_price"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FollowingTovarNewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/FollowingTovarOldPrice"
                android:textColor="@color/white"
                android:layout_marginBottom="1dp"
                android:padding="3dp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="9"
                android:text="@string/title_tovar_new_price"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_toEndOf="@+id/FollowingTovarNewPrice"
                android:layout_toRightOf="@+id/FollowingTovarNewPrice">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/skidka_img" />

                <TextView
                    android:id="@+id/FollowingTovarSkidka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RelativeLayout>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/FollowingTovarImage"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/FollowingTovarName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:shadowDy="2"
                android:shadowDx="2"
                android:shadowRadius="9"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:text="Tovaar Name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:transitionName="selected_tovar_name"
                app:layout_constraintBottom_toTopOf="@id/FollowingTovarCategory"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/FollowingTovarCategory"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="9"
                android:text="@string/title_tovar_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/FollowingTovarName"
                android:layout_marginLeft="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
